# CuraEngine_plugin_infill_generate

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conandata.yml  conanfile.py
.github/workflows/: conan-package.yml  linux.yml  macos.yml  release.yml  requirements-conan-package.txt  windows.yml
CuraEngineInfillGenerate/: CuraEngineInfillGenerate.py  __init__.py  infill_settings.def.json  plugin.json
CuraEngineInfillGenerate/tiles/: cont_honeycomb.wkt  cura.wkt  honeycomb.wkt  lightning.wkt
CuraEngineInfillGenerate/tiles/hex/: honeycomb.wkt
CuraEngineInfillGenerate/x86_64/Darwin/: .gitignore
CuraEngineInfillGenerate/x86_64/Windows/: .gitignore
CuraEngineTiledInfill/: CuraEngineTiledInfill.py  __init__.py  infill_settings.def.json  plugin.json
CuraEngineTiledInfill/tiles/: fill.wkt  flower_of_life.wkt  hexa_star.wkt  star.wkt  triangle_star.wkt
include/infill/: boost_tags.h  concepts.h  content_reader.h  geometry.h  infill_generator.h  point_container.h  tile.h  tile_type.h
include/plugin/: broadcast.h  cmdline.h  generate.h  handshake.h  metadata.h  plugin.h  settings.h
src/: main.cpp
templates/cura_plugin/: constants.py.jinja  package.json.jinja  plugin.json.jinja
templates/include/: cmdline.h.jinja
templates/include/plugin/: cmdline.h.jinja
